Fix Generate Schedule Icon Colors in Dark Mode & Add Icon Animation

--- a/styles/pages/generate-schedule.scss
+++ b/styles/pages/generate-schedule.scss
@@ -24,6 +24,9 @@
   margin-right: auto;
   svg {
     font-size: max(min(4vw, 52px), 36px);
+    path {
+      stroke: var(--primary-fg);
+    }
   }
 }
 
